cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8.txt
../dataset/june2020_dataset_copy/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/BitTutte.java:97: error: (required.method.not.called) $$ 4 $$ method close $$ scan.useDelimiter("[^0-9]+") $$ java.util.Scanner $$ regular method exit $$ ( 2194, 2222 ) $$ @MustCall method close may not have been invoked on scan.useDelimiter("[^0-9]+") or any of its aliases.
				scan.useDelimiter("[^0-9]+");
				                 ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/Tutte.java:68: error: (required.method.not.called) $$ 4 $$ method close $$ scan $$ java.util.Scanner $$ regular method exit $$ ( 1308, 1338 ) $$ @MustCall method close may not have been invoked on scan or any of its aliases.
				Scanner scan = new Scanner(f);
				        ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/Tutte.java:69: error: (required.method.not.called) $$ 4 $$ method close $$ scan.useDelimiter("[^0-9]+") $$ java.util.Scanner $$ regular method exit $$ ( 1343, 1371 ) $$ @MustCall method close may not have been invoked on scan.useDelimiter("[^0-9]+") or any of its aliases.
				scan.useDelimiter("[^0-9]+");
				                 ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
3 errors
